added mark up for sections intro, services and about

--- a/index.html
+++ b/index.html
@@ -53,7 +53,124 @@
                     <i class="fa fa-angle-double-right fa-3x icon-color"></i>
                 </div>
             </div>
-            <div class="slider-indicators"></div>
+            <div class="slider-indicators">
+                <div class="panel">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+        </section>
+
+        <section id="intro">
+            <div class="intro">
+                <div class="intro-text">
+                    <span>Some of our top services</span>
+                    <p>Ut eleifend libero sed rhoncus consequat. Maecenas
+                        tincidunt, augue et rutum condimentum, libero lectus mattis orci ut commodo.</p>
+                </div>
+                <div class="btn">
+                    <span>view more</span>
+                </div>
+            </div>
+        </section>
+
+        <!--section services-->
+        <section id="services">
+            <div class="services">
+                <div class="services-items">
+                    <div class="item">
+                        <div class="services-item active-item">
+                            <div class="item-icon active-item-icon"><i class="far fa-5x fa-thumbs-up"></i></div>
+                            <div class="item-title active-item-title">suspendisse</div>
+                            <div class="item-text active-item-text">
+                                <p>Quisque id tellus quis risus vehicula vehicula ut turpis.
+                                    In eros nulla placerat vitae at, vehicula ut nunc.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="btn services-btn item-btn active-item-btn">
+                            <span>read more</span>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="services-item">
+                            <div class="item-icon"><i class="fa fa-flip-horizontal fa-5x fa-key" aria-hidden="true"></i>
+                            </div>
+                            <div class="item-title">maecenas</div>
+                            <div class="item-text">
+                                <p>Ul eleifend libero sed neque rhoncus consequat. Maecenas tincidunt, augue et
+                                    rutrum condimentum, libero lectus
+                                    mattis orci, ut commodo.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="btn services-btn item-btn">
+                            <span>read more</span>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="services-item">
+                            <div class="item-icon"><i class="fas fa-5x fa-flag"></i></div>
+                            <div class="item-title">aliquam</div>
+                            <div class="item-text">
+                                <p>Vivamus eget ante bibendum arcu vehicu a ultricies. Integer verenatis
+                                    mattis nisl, v tae pulvinar dui tempor non.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="btn services-btn item-btn">
+                            <span>read more</span>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="services-item">
+                            <div class="item-icon"><i class="fas fa-5x fa-flask"></i></div>
+                            <div class="item-title">habitasse</div>
+                            <div class="item-text">
+                                <p>Astehicula ultricies. Integer venenatis
+                                    mattis nisl, vitae pulvinar dui tempor non.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="btn services-btn item-btn">
+                            <span>read more</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="about">
+            <div class="about-intro">
+                <div class="about-intro-text">
+                    <span>why modus versus?</span>
+                    <p>Capacitance cascading integer refective interface data development high bus cache dithering
+                        transponder.</p>
+                </div>
+            </div>
+            <div class="about-content">
+                <div class="about-content-text">
+                    <div class="why-choose">
+                        <span class="why-choose-title">Why Choose Us?</span>
+                        <div class="why-choose-list">
+                            <ul>
+                                <li><i class="fa fa-arrow-right"></i> Quisque at massa ipsum</li>
+                                <li><i class="fa fa-arrow-right"></i> Maecenas a lorem augue, egestas</li>
+                                <li><i class="fa fa-arrow-right"></i> Cras vitae felis at lacus eleifend</li>
+                                <li><i class="fa fa-arrow-right"></i> Etiam auctor diam pellentesque</li>
+                                <li><i class="fa fa-arrow-right"></i> Nulla ac massa at dolor</li>
+                                <li><i class="fa fa-arrow-right"></i> Condimentum eleifend vitae vitae</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="skills"></div>
+                    <div class="quote"></div>
+                </div>
+            </div>
         </section>
     </main>
 
