fixed and added html markup

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Project title</title>
-    <!-- Custom google font -->
+    <title>Modus versus</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.4/css/all.css"
           integrity="sha384-DmABxgPhJN5jlTwituIyzIUk6oqyzf3+XuP7q3VfcWA2unxgim7OSSZKKf0KSsnh" crossorigin="anonymous">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css'>
@@ -143,7 +142,7 @@
                 </div>
             </div>
         </section>
-
+        <!--section about-->
         <section id="about">
             <div class="about-intro">
                 <div class="about-intro-text">
@@ -154,6 +153,7 @@
             </div>
             <div class="about-content">
                 <div class="about-content-text">
+
                     <div class="why-choose">
                         <span class="why-choose-title">Why Choose Us?</span>
                         <div class="why-choose-list">
@@ -167,14 +167,79 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="skills"></div>
-                    <div class="quote"></div>
+
+                    <div class="skills">
+                        <div class="skills-text">
+                            <p>Curabitur quis nisl in leo euismod venenatis eu in diam.
+                                Etiam auctor diam pellentesque lectus <a href="#">vehicu a mattis</a>. Nulla ac massa at
+                                dolor
+                                condimentum eleifend vitae vitae urna.
+                            </p>
+                        </div>
+                        <div class="diagrams">
+
+                        </div>
+                    </div>
+
+                    <div class="quote">
+                        <span class="quote-title">What Client's Say ?</span>
+                        <div class="quote-text">
+                            <p><em>Curabitur quis nisl in leo euismad
+                                venenatis eu in diam. Etiam auctor diam
+                                pellentesque lectus vehicula mattis.</em> Nulla
+                                ac massa at dolor condimentum
+                            </p>
+                        </div>
+                        <span class="author">Jhon Doe</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- section clients-->
+        <section id="clients">
+            <div class="clients">
+                <div class="clients-slider-title">
+                    <span class="clients-title">Our Happy Clients</span>
+                    <div class="special-border">
+                        <div class="circle"></div>
+                        <div class="dash"></div>
+                    </div>
+                    <div class="clients-btns">
+                        <div class="slider-btn"><i class="fa fa-3x fa-angle-left"></i></div>
+                        <div class="slider-btn"><i class="fa fa-3x fa-angle-right"></i></div>
+                    </div>
+                </div>
+                <div class="clients-slider">
+                    <div class="clients-slider-item"><img src="images/jquery.png" alt=""></div>
+                    <div class="clients-slider-item"><img src="images/jquery.png" alt=""></div>
+                    <div class="clients-slider-item"><img src="images/jquery.png" alt=""></div>
+                    <div class="clients-slider-item"><img src="images/jquery.png" alt=""></div>
+                    <div class="clients-slider-item"><img src="images/jquery.png" alt=""></div>
+                    <div class="clients-slider-item"><img src="images/jquery.png" alt=""></div>
                 </div>
             </div>
         </section>
     </main>
 
-    <footer id="footer"></footer>
+    <footer id="footer">
+        <div class="contacts-container">
+            <div class="contacts"></div>
+        </div>
+        <div class="copyright-container">
+            <div class="copyright">
+                <div class="copyright-year">
+                    <span>2013 ModusVersus</span>
+                </div>
+                <div class="share-with">
+                    <a href="#"><i class="fab fa-2x fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-2x fa-google-plus-g"></i></a>
+                    <a href="#"><i class="fab fa-2x fa-twitter"></i></a>
+                    <a href="#"><i class="fas fa-2x fa-rss"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
